# server/controllers/authController.js
@@ -3,26 +3,6 @@ const jwt = require("jsonwebtoken");
 
 const User = require("../models/User");
 
-exports.signup = async (req, res) => {
-  try {
-    const { email, password } = req.body;
-
-    const existingUser = await User.findOne({ email });
-    if (existingUser) {
-      return res.status(409).json({ error: "Email already in use" });
-    }
-
-    const hashedPassword = await bcrypt.hash(password, 10);
-
-    const user = new User({ email, password: hashedPassword });
-    await user.save();
-
-    res.status(201).json({ message: "User created" });
-  } catch (error) {
-    res.status(400).json({ error: "Signup failed", details: error.message });
-  }
-};
-
 exports.login = async (req, res) => {
   try {
     const { email, password } = req.body;
